increase the font-size on the login and sign up forms to prevent screen zoom on mobile

--- a/src/css/LoginForm.css
+++ b/src/css/LoginForm.css
@@ -34,6 +34,7 @@ input[type="password"] {
     border-radius: 5px;
     background-color: white;
     color: black;
+    font-size: 16px;
 }
 
 input[type="text"]:focus,
