--- a/src/css/SignupForm.css
+++ b/src/css/SignupForm.css
@@ -36,6 +36,7 @@
     border-radius: 5px;
     margin: 0;
     outline: none;
+    font-size: 16px;
 }
 .signup-container form input[type="email"]:focus,
 .signup-container form input[type="password"]:focus,
